First commit. Adds a springboot run GPT